--- a/Danny/resources/css/styleDanny.css
+++ b/Danny/resources/css/styleDanny.css
@@ -1,5 +1,5 @@
 html {
-  position: relative;
+/*  position: relative;*/
 }
 
 body {
@@ -7,8 +7,13 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  position: relative;
+/*  position: relative;*/
 /*  overflow-y: hidden;*/
+}
+
+.bg-grey {
+  background-color: #111 !important;
+  color: #eee;
 }
 
 /*#fullpage {
@@ -511,11 +516,13 @@ opacity: 0;
   top: 10%;
   font-size: 10px;
   letter-spacing: 0px;
+  letter-spacing: 5px;
+  color: orange;
 }
 
 .ux-text:hover {
-  letter-spacing: 5px;
-  color: orange;
+    letter-spacing: 0px;
+    color: #eee;
 }
 
 .text {
