--- a/resources/css/demo.css
+++ b/resources/css/demo.css
@@ -207,42 +207,68 @@ a:focus {
 }
 
 /* Grid */
-.grid {
-	display: grid;
-	width: calc(100% - 6em);
-	height: calc(100vh - 6em);
-	grid-auto-rows: calc((calc(100vh - 6em) / 30) - var(--gap));
-	grid-auto-columns: calc((calc(100% - 6em) / 30) - var(--gap));
-	justify-content: center;
-	align-content: center;
-	grid-gap: var(--gap);
-	padding-top: 100px;
-/*	pointer-events: none;*/
+
+
+.grid_fallback {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: calc(100% - 4px);
+  margin-right: 8px;
+  padding-bottom: 50px !important;
 }
 
-.no-js .grid {
-	margin: 0 0 15vh;
-}
-
-.js .grid {
-	position: absolute;
-	top: 3em;
-	left: 3em;
-	opacity: 0;
-}
-
-.js .grid--current {
-	opacity: 1;
-	pointer-events: auto;
-}
-
-.grid__item {
-	position: relative;
-	padding: 1em;
+.grid__item_fallback {
+  height: 70px;
+  width: 30%;
+  margin: 1px;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	background-size: cover;
-	transition: transform 0.2s ease-out;
+}
+
+
+@supports (display: grid) {
+	.grid {
+		display: grid;
+		width: calc(100% - 6em);
+		height: calc(100vh - 6em);
+		grid-auto-rows: calc((calc(100vh - 6em) / 30) - var(--gap));
+		grid-auto-columns: calc((calc(100% - 6em) / 30) - var(--gap));
+		justify-content: center;
+		align-content: center;
+		grid-gap: var(--gap);
+		padding-top: 100px;
+		}
+
+
+	.no-js .grid {
+		margin: 0 0 15vh;
+	}
+
+	.js .grid {
+		position: absolute;
+		top: 3em;
+		left: 3em;
+		opacity: 0;
+	}
+
+	.js .grid--current {
+		opacity: 1;
+		pointer-events: auto;
+	}
+
+	.grid__item {
+		height: auto;
+	  width: auto;
+	  margin: 0;
+		position: relative;
+		padding: 1em;
+		background-repeat: no-repeat;
+		background-position: 50% 50%;
+		background-size: cover;
+		transition: transform 0.2s ease-out;
+	}
 }
 
 .grid__item--name,
@@ -312,6 +338,7 @@ a:focus {
 	margin: 0;
 }
 
+
 .no-js .grid__item--nav {
 	display: none;
 }
@@ -359,45 +386,6 @@ a:focus {
 .grid--layout-1 .grid__item--nav-prev { grid-area: 3 / 6 / 8 / 11; }
 .grid--layout-1 .grid__item--nav-next { grid-area: 24 / 15 / 29 / 20; }
 
-/* Layout 2 */
-.grid--layout-2 .grid__item:first-child { grid-area: 17 / 1 / 24 / 5; background-image: url(../img/7.jpg); }
-.grid--layout-2 .grid__item:nth-child(2) { grid-area: 22 / 6 / 28 / 10; background-image: url(../img/9.jpg); }
-.grid--layout-2 .grid__item:nth-child(3) { grid-area: 14 / 5 / 22 / 10; background-image: url(../img/11.jpg); }
-.grid--layout-2 .grid__item:nth-child(4) { grid-area: 17 / 10 / 26 / 15; background-image: url(../img/13.jpg); }
-.grid--layout-2 .grid__item:nth-child(5) { grid-area: 1 / 10 / 17 / 15; background-image: url(../img/15.jpg); }
-.grid--layout-2 .grid__item:nth-child(6) { grid-area: 11 / 15 / 24 / 20; background-image: url(../img/17.jpg); }
-.grid--layout-2 .grid__item:nth-child(7) { grid-area: 5 / 15 / 11 / 18; background-image: url(../img/19.jpg); }
-.grid--layout-2 .grid__item:nth-child(8) { grid-area: 1 / 18 / 11 / 23; background-image: url(../img/21.jpg); }
-.grid--layout-2 .grid__item:nth-child(9) { grid-area: 20 / 20 / 27 / 24; background-image: url(../img/23.jpg); }
-.grid--layout-2 .grid__item:nth-child(10) { grid-area: 24 / 15 / 29 / 20; background-image: url(../img/2.jpg); }
-.grid--layout-2 .grid__item:nth-child(11) { grid-area: 4 / 23 / 11 / 27; background-image: url(../img/4.jpg); }
-.grid--layout-2 .grid__item:nth-child(12) { grid-area: 11 / 20 / 20	/ 30; background-image: url(../img/6.jpg); }
-.grid--layout-2 .grid__item:nth-child(13) { grid-area: 25 / 24 / 29 / 28; background-image: url(../img/8.jpg); }
-.grid--layout-2 .grid__item--name { grid-area: 16 / 9 / 30 / 16; }
-.grid--layout-2 .grid__item--title { grid-area: 1 / 27 / 11 / 29; }
-.grid--layout-2 .grid__item--text { grid-area: 1 / 5 / 9 / 10; align-items: flex-end; text-align: right;}
-.grid--layout-2 .grid__item--nav-prev { grid-area: 9 / 5 / 14 / 10; }
-.grid--layout-2 .grid__item--nav-next { grid-area: 20 / 24 / 25 / 30; }
-
-/* Layout 3 */
-.grid--layout-3 .grid__item:first-child { grid-area: 6 / 1 / 14 / 5; background-image: url(../img/1.jpg); filter: grayscale(100%); }
-.grid--layout-3 .grid__item:nth-child(2) { grid-area: 3 / 5 / 14 / 10; background-image: url(../img/2.jpg); filter: grayscale(100%); }
-.grid--layout-3 .grid__item:nth-child(3) { grid-area: 14 / 1 / 21 / 5; background-image: url(../img/3.jpg); filter: grayscale(100%);}
-.grid--layout-3 .grid__item:nth-child(4) { grid-area: 19 / 10 / 28 / 20; background-image: url(../img/4.jpg); filter: grayscale(100%); }
-.grid--layout-3 .grid__item:nth-child(5) { grid-area: 1 / 10 / 11 / 18; background-image: url(../img/5.jpg); filter: grayscale(100%);}
-.grid--layout-3 .grid__item:nth-child(6) { grid-area: 11 / 10 / 19 / 15; background-image: url(../img/6.jpg); }
-.grid--layout-3 .grid__item:nth-child(7) { grid-area: 11 / 15 / 19 / 20; background-image: url(../img/7.jpg); }
-.grid--layout-3 .grid__item:nth-child(8) { grid-area: 1 / 18 / 6 / 23; background-image: url(../img/8.jpg); }
-.grid--layout-3 .grid__item:nth-child(9) { grid-area: 20 / 20 / 27 / 24; background-image: url(../img/9.jpg); }
-.grid--layout-3 .grid__item:nth-child(10) { grid-area: 20 / 28 / 25 / 30; background-image: url(../img/10.jpg); }
-.grid--layout-3 .grid__item:nth-child(11) { grid-area: 4 / 23 / 11 / 27; background-image: url(../img/11.jpg); }
-.grid--layout-3 .grid__item:nth-child(12) { grid-area: 11 / 20 / 20	/ 30; background-image: url(../img/12.jpg); }
-.grid--layout-3 .grid__item:nth-child(13) { grid-area: 20 / 24 / 26 / 28; background-image: url(../img/13.jpg); }
-.grid--layout-3 .grid__item--name { grid-area: 15 / 16 / 30 / 23; }
-.grid--layout-3 .grid__item--title { grid-area: 1 / 27 / 11 / 29; }
-.grid--layout-3 .grid__item--text { grid-area: 19 / 5 / 30 / 10; text-align: right;}
-.grid--layout-3 .grid__item--nav-prev { grid-area: 14 / 5 / 19 / 10; }
-.grid--layout-3 .grid__item--nav-next { grid-area: 6 / 18 / 11 / 23; }
 
 /* Demo themes */
 .demo-2 {
@@ -458,6 +446,7 @@ a:focus {
 }
 
 @media screen and (max-width: 41em) {
+
 	.message {
 		display: block;
 	}
@@ -465,6 +454,7 @@ a:focus {
 		display: block;
 		height: auto;
 		position: relative;
+/*		padding-bottom: 100px;*/
 		text-align: center;
 	}
 	.codrops-header {
@@ -482,6 +472,8 @@ a:focus {
 	.demo {
 		margin: 0 0.5em;
 	}
+
+
 	main .grid {
 		height: auto;
 		top: auto !important;
@@ -523,4 +515,6 @@ a:focus {
 		writing-mode: horizontal-tb;
 	}
 }
+
+
 
