--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,54 @@ html {
   overflow-x: hidden !important;
 }
 
+
+#resume {
+  height: 100vh;
+  width: 100%;
+  background-color: #eee;
+
+}
+
+.resume_text {
+  font-family: helvetica;
+  font-size: 8px;
+  color: #000;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+#resume_2 {
+  height: 100%;
+  margin-top: 10%;
+  background-color: #f8f8f8;
+  width: 100%;
+  transform: rotate(1deg);
+}
+
+#resume_image_1 {
+  height: 40%;
+  background-color: #222;
+  transform: rotate(-1deg);
+  width: 50%;
+  margin-left: 20px;
+  opacity: 0.3;
+  margin-top: 40px;
+}
+
+#resume_line_1 {
+  height: 50%;
+  width: 12%;
+  background-color: #222;
+  opacity: 0.2;
+  transform: rotate(-5deg);
+  position: relative;
+  float: right;
+  margin-right: 40px;
+  z-index: 5;
+  padding-top: 10px;
+  border-left: 3px solid #111;
+}
+
 .portfolio {
   color: #000 !important;
 }
@@ -619,7 +667,7 @@ height: 100%;
 .wrapper {
   height: 100vh;
   width: 100%;
-  background: url("../gitHubImages/Attachment-10.jpg");
+  background: url("../gitHubImages/Attachment-6.jpg");
   background-position-x: 50%;
   background-position-y: 50%;
   background-size: cover;
@@ -2977,4 +3025,35 @@ background-color: transparent;
   }
 }
 
+@media (max-height: 457px) {
+  .text_2 {
+    font-size: 90px;
+    line-height: 70px;
+  }
+
+  .text_2_div {
+    left: 15%;
+    top: 40% !important;
+  }
+
+  .psbLogo_2 {
+    height: 90px;
+    top: 3%;
+  }
+
+  #large-header{
+    height: 700px !important;
+  }
+}
+
+@media (max-height: 556px) {
+  .text_2_div {
+    top: 20%;
+  }
+
+  .psbLogo_2 {
+/*    height: 157px !important;
+    width: 113px !important;*/
+  }
+}
 
