--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2998,7 +2998,7 @@ background-color: transparent;
     }
   }
 
-@media (max-device-aspect-ratio: 3/4) {
+/*@media (max-device-aspect-ratio: 3/4) {
 
   .wrapper,
   #large-header {
@@ -3022,7 +3022,7 @@ background-color: transparent;
   #large-header {
   height: calc(100vw * 1.778 - 9%);
   }
-}
+}*/
 
 @media (max-height: 457px) {
 /*  .text_2 {
