--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2998,31 +2998,31 @@ background-color: transparent;
     }
   }
 
-/*@media (max-device-aspect-ratio: 3/4) {
+@media (max-device-aspect-ratio: 3/4) {
 
   .wrapper,
   #large-header {
-  height: calc(100vw * 1.333 - 9%);
+  height: 100vh;
   }
 }
 @media (max-device-aspect-ratio: 2/3) {
   .wrapper,
   #large-header {
-  height: calc(100vw * 1.5 - 9%);
+  height: 100vh;
   }
 }
 @media (max-device-aspect-ratio: 10/16) {
   .wrapper,
   #large-header {
-  height: calc(100vw * 1.6 - 9%);
+  height: 100vh;
   }
 }
 @media (max-device-aspect-ratio: 9/16) {
   .wrapper,
   #large-header {
-  height: calc(100vw * 1.778 - 9%);
+  height: 100vh;
   }
-}*/
+}
 
 @media (max-height: 457px) {
 /*  .text_2 {
