--- a/Danny/resources/css/styleDanny.css
+++ b/Danny/resources/css/styleDanny.css
@@ -17,6 +17,13 @@ body {
   color: #eee;
 }
 
+
+.about {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
 /*#fullpage {
   height: 100vh;
   overflow: hidden;
@@ -27,8 +34,8 @@ body {
 }*/
 
 .wrapper-Y {
-  height: 100vh;
   width: 100%;
+  height: 100vh;
 }
 
 .wrapper {
@@ -67,7 +74,7 @@ body {
 
 .wrapper-cover {
   position: absolute;
-  height: 500px;
+  height: 80vh;
   width: 300px;
   left: 50%;
   margin-left: -140px;
@@ -85,6 +92,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   letter-spacing: 10px;
+/*  margin-top: 10px;*/
 }
 
 .heading:hover {
@@ -116,6 +124,7 @@ body {
 }
 .slide {
   height: 100%;
+  min-width: 258px;
 }
 
 .hide {
@@ -285,12 +294,13 @@ hr {
   height: 100vh;
   background-color: #fff;
   width: 100%;
+  min-height: 600px;
 }
 
 .wrapper-new-content {
   position: absolute;
   width: 100%;
-  height: 100vh;
+/*  height: 100vh;*/
 }
 
 .wrapper-new-nav {
@@ -318,7 +328,7 @@ hr {
 .new-nav-heading {
   position: absolute;
   left: 50%;
-  top: 5%;
+  top: 3%;
   transform: translate(-50%, -50%);
   margin-left: 10px;
 }
@@ -584,9 +594,9 @@ opacity: 0;
 }
 
   .wrapper-cover {
-    height: 430px;
+    height: 80vh;
     width: 258px;
-    margin-left: -120px;
+    margin-left: -126px;
   }
 
   .main-bg-2 {
