--- a/CarCrash/resources/css/styleCrash.css
+++ b/CarCrash/resources/css/styleCrash.css
@@ -7,6 +7,21 @@ body {
   background-color: grey;
 }
 
+.controls {
+  font-size: 15px;
+}
+
+#controls {
+  position: fixed;
+  border: 3px solid orange;
+  padding: 10px;
+  text-align: center;
+  border-radius: 15px;
+  display: none;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
 .switch_text {
   display: none;
 }
@@ -207,6 +222,14 @@ body {
     display: block;
     border-radius: 20px;
     }
+}
+
+@media (min-width: 900px) {
+
+  #controls {
+    display: block;
+  }
+
 }
 
 
