--- a/Shooter/resources/css/styleShooter.css
+++ b/Shooter/resources/css/styleShooter.css
@@ -10,6 +10,19 @@ body {
   display: none;
 }
 
+.controls {
+  font-size: 15px;
+}
+
+#controls {
+  position: fixed;
+  border: 3px solid orange;
+  padding: 10px;
+  text-align: center;
+  border-radius: 15px;
+  display: none;
+  margin-left: 20px;
+}
 
 #wrapper {
   position: relative;
@@ -186,6 +199,13 @@ body {
     }
 }
 
+@media (min-width: 900px) {
+
+  #controls {
+    display: block;
+  }
+
+}
 /*@media (max-height: 500px) {
   #wrapper {
     height: 100vh;
