--- a/clickX/resources/css/styleClick.css
+++ b/clickX/resources/css/styleClick.css
@@ -11,7 +11,7 @@ body,html {
 
 
 .tint {
-  min-height: 100vh;
+  min-height: 720px;
   width: 100%;
   background: url("../images/shorpy.jpg");
   background-size: cover;
