--- a/clickX/resources/css/styleClick.css
+++ b/clickX/resources/css/styleClick.css
@@ -14,6 +14,7 @@ body,html {
   height: 720px;
   width: 100%;
   background: url("../images/shorpy.jpg");
+  background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 70%;
   background-position-x: 30%;
@@ -22,7 +23,7 @@ body,html {
   -o-background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
-/*  background-attachment: fixed;*/
+  background-attachment: fixed;
 }
 
 .tint:before {
@@ -275,10 +276,11 @@ display: none;
 .third_section {
   background: url("../images/small.jpg");
   background-size: cover;
-/*  background-attachment: fixed;*/
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-position-y: 30%;
   opacity: 1;
-  height: 450px;
+  min-height: 450px;
   position: relative;
 }
 
@@ -336,23 +338,25 @@ display: none;
   background: url("../images/image3.jpg");
   background-size: cover;
   background-position: 50% 50%;
-/*  background-attachment: fixed;*/
+  background-attachment: fixed;
   transition: 0.1s ease;
 }
 
 .reel_Two {
   background: url("../images/78.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: 50% 50%;
-/*  background-attachment: fixed;*/
+  background-attachment: fixed;
   transition: 0.1s ease;
 }
 
 .reel_Three {
   background: url("../images/three.jpg");
   background-size: cover;
-  background-position: 50% 50%;
-/*  background-attachment: fixed;*/
+  background-position: 90% 50%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   transition: 0.1s ease;
 }
 
@@ -360,7 +364,8 @@ display: none;
   background: url("../images/00.jpg");
   background-size: cover;
   background-position: 80% 50%;
-/*  background-attachment: fixed;*/
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   transition: 0.1s ease;
 }
 
@@ -368,7 +373,8 @@ display: none;
   background: url("http://warsaw.leica-gallery.pl/wp-content/uploads/sites/2/2016/08/Maciej-Dakowicz1.jpg");
   background-size: cover;
   background-position: 50% 50%;
-/*  background-attachment: fixed;*/
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   transition: 0.1s ease;
 }
 
@@ -376,7 +382,8 @@ display: none;
   background: url("https://www.worldphoto.org/sites/default/files/199225_214955_0_%20%C2%A9%20Dina%20Alfasi%2C%20Israel%2C%20Shortlist%2C%20Open%20Competition%2C%20Street%20Photography%2C%202017%20Sony%20World%20Photography%20Awards.jpg");
   background-size: cover;
   background-position: 50% 50%;
-/*  background-attachment: fixed;*/
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   transition: 0.1s ease;
 }
 
@@ -388,12 +395,14 @@ display: none;
   background-position: 80% 80%;
   transition: 0.1s ease;
   cursor: pointer;
+  opacity: 0.3;
 }
 
 .reel_Four:hover {
   background-position: 5% 80%;
   transition: 0.1s ease;
   cursor: pointer;
+  opacity: 0.3;
 }
 
 .reel_One {
@@ -457,6 +466,17 @@ hr {
     margin-top: 0;
   }
 
+  .reel_Three {
+    background-position-y: 20%;
+  }
+
+  .reel_Six {
+    background-position-y: 100%;
+  }
+
+  .reel_Four {
+    background-position-x: 100%;
+  }
   .huge {
     font-size: 80px;
   }
