--- a/clickX/resources/css/styleClick.css
+++ b/clickX/resources/css/styleClick.css
@@ -23,7 +23,7 @@ body,html {
   -o-background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
 }
 
 .tint:before {
@@ -277,7 +277,7 @@ display: none;
   background: url("../images/small.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   background-position-y: 30%;
   opacity: 1;
   min-height: 450px;
@@ -338,7 +338,7 @@ display: none;
   background: url("../images/image3.jpg");
   background-size: cover;
   background-position: 50% 50%;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   transition: 0.1s ease;
 }
 
@@ -347,7 +347,7 @@ display: none;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   transition: 0.1s ease;
 }
 
@@ -356,7 +356,7 @@ display: none;
   background-size: cover;
   background-position: 90% 50%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   transition: 0.1s ease;
 }
 
@@ -365,7 +365,7 @@ display: none;
   background-size: cover;
   background-position: 80% 50%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   transition: 0.1s ease;
 }
 
@@ -373,7 +373,7 @@ display: none;
   background: url("http://warsaw.leica-gallery.pl/wp-content/uploads/sites/2/2016/08/Maciej-Dakowicz1.jpg");
   background-size: cover;
   background-position: 50% 50%;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   background-repeat: no-repeat;
   transition: 0.1s ease;
 }
@@ -382,7 +382,7 @@ display: none;
   background: url("https://www.worldphoto.org/sites/default/files/199225_214955_0_%20%C2%A9%20Dina%20Alfasi%2C%20Israel%2C%20Shortlist%2C%20Open%20Competition%2C%20Street%20Photography%2C%202017%20Sony%20World%20Photography%20Awards.jpg");
   background-size: cover;
   background-position: 50% 50%;
-  background-attachment: fixed;
+/*  background-attachment: fixed;*/
   background-repeat: no-repeat;
   transition: 0.1s ease;
 }
